--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.datasource.url=jdbc:mysql://localhost:3306/gs?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=1234
+
+api.security.token.secret=${JWT_SECRET:my-secret-key}
