--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,12 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-spring.datasource.url=jdbc:mysql://localhost:3306/gs?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=1234
+#spring.datasource.url=jdbc:mysql://localhost:3306/gs?useSSL=false&serverTimezone=UTC
+#spring.datasource.username=root
+#spring.datasource.password=1234
+
+spring.datasource.url=jdbc:mysql://challenge.mysql.database.azure.com:3306/gs?serverTimezone=UTC
+spring.datasource.username=rm93359
+spring.datasource.password=Dalva2010
 
 api.security.token.secret=${JWT_SECRET:my-secret-key}
